review full-mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,14 @@
-h1 {
-  color: blue;
-}
+@import "abstracts/all";
+@import "base/all";
+@import "blocks/all";
+@import "home_page/components/all";
+@import "home_page/layout/all";
+
+// @font-face{
+//   font-family: 'Dosis';
+
+// }
+
+// *{
+//   font-family: 'ope'
+// }
