--- a/styles/blocks/_title.scss
+++ b/styles/blocks/_title.scss
@@ -4,7 +4,7 @@
     font-size: 25px;
     color: black;
     font-weight: bold;
-    &--color{
+    &--color {
       color: white;
     }
   }
@@ -13,15 +13,19 @@
     color: black;
     font-size: 14px;
     padding: 10px 0;
-    &--color{
+    &--color {
       color: $color-mountain-mist;
     }
   }
-  &--center{
+  &--center {
     text-align: center;
   }
-  &__img{
+  &__img {
     padding: 10px 0;
   }
+}
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
 
 }
