--- a/styles/home_page/components/main/welcome/_welcome.scss
+++ b/styles/home_page/components/main/welcome/_welcome.scss
@@ -1,5 +1,10 @@
 .welcome {
   .introduction {
-    
+
   }
+}
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
 }
