--- a/styles/home_page/layout/_all.scss
+++ b/styles/home_page/layout/_all.scss
@@ -1,4 +1,5 @@
 @import "header_layout/layout_intro";
+@import "header_layout/layout_contacttop";
 @import "main_layout/layout_contact";
 @import "main_layout/layout_ourteachers";
 @import "main_layout/layout_review";
