--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -26,4 +26,22 @@
       color: #ffffff;
     }
   }
+  &--welcome{
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    font-weight: 700;
+    color: #ffffff !important;
+    font-size:14px;
+    padding: 12px 25px;
+    margin: 0 auto;
+    margin-top:20px;
+    font-family: "Dosis", sans-serif;
+  }
+}
+
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
 }
