--- a/styles/blocks/_social.scss
+++ b/styles/blocks/_social.scss
@@ -11,7 +11,7 @@
       &:hover {
         color: #ffffff;
       }
-      &--color{
+      &--color {
         color: #ffffff;
         font-size: 13px;
         &:hover {
@@ -20,9 +20,14 @@
       }
     }
   }
-  &--mg{
+  &--mg {
     display: inline-block;
     padding: 10px 0;
     margin: 0;
   }
+}
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
 }
