--- a/styles/home_page/components/footer/_footer.scss
+++ b/styles/home_page/components/footer/_footer.scss
@@ -40,4 +40,24 @@
     padding: 10px 15px;
     color: #ffffff
   }
+  .social{
+    &__items{
+      margin-right: 8px;
+    }
+  }
+}
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
+}
+@media only all and (min-width: 786px) {
+  .footer {
+    .social{
+      &__items{
+        margin-left: 8px;
+      }
+    }
+  }
+
 }
