--- a/styles/home_page/components/main/_about.scss
+++ b/styles/home_page/components/main/_about.scss
@@ -1,4 +1,9 @@
 .about{
   background-image: url('../../../../images/mt-1579-home-parallax1.jpg');
-  padding: 45px 15px;
+  padding: 25px 15px;
+}
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
 }
