--- a/styles/home_page/components/main/our_class/_our_class_intro.scss
+++ b/styles/home_page/components/main/our_class/_our_class_intro.scss
@@ -1,62 +1,6 @@
-.ourclass {
-  &__list {
-    max-width: 100%;
-    padding-top: 25px;
-  }
-  &__item {
-  }
 
-  &__img {
-    text-align: center;
-    margin: 0 auto;
-    &--width {
-      max-width: 100%;
-      height: auto;
-    }
-  }
-  &__about {
-    text-align: center;
-    border: 1px solid $color-mercury;
-    border-bottom-right-radius: 40px;
-    border-bottom-left-radius: 40px;
-    margin: 0 auto;
-    transition: 0.4s;
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
 
-    &:hover {
-      border: 1px solid $color-radical-red;
-    }
-  }
-  &__title {
-    font-size: 20px;
-    color: #ffffff;
-    padding: 10px 0;
-    margin: 0;
-    &--color:nth-child(1) {
-      background: $color-radical-red;
-    }
-    &--color:nth-child(2) {
-      background: $color-purple-heart;
-    }
-    &--color:nth-child(3) {
-      background: $color-pastel-green;
-    }
-  }
-  &__sub {
-    transition: 0.2s;
-    padding: 5px 0;
-    .aboutsub__title {
-      font-size: 18px;
-      margin: 0;
-    }
-    .aboutsub__content {
-      font-size: 14px;
-      margin: 0;
-    }
-    // &:hover {
-    //   background: $color-alto;
-    // }
-    &:last-child {
-      border-radius: 50px;
-    }
-  }
 }
