--- a/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
+++ b/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
@@ -39,3 +39,8 @@
     margin: 0;
   }
 }
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
+}
