--- a/styles/home_page/layout/main_layout/_layout_ourteachers.scss
+++ b/styles/home_page/layout/main_layout/_layout_ourteachers.scss
@@ -2,3 +2,8 @@
   width: 100%;
   padding: 45px 15px;
 }
+@media only all and (min-width: 786px) and (max-width: 960px) {
+}
+@media only all and (min-width: 960px) {
+
+}
