--- a/styles/home_page/components/header/_introduction.scss
+++ b/styles/home_page/components/header/_introduction.scss
@@ -1,6 +1,6 @@
 .header__intro {
   width: auto;
-  background: url("../../../../images/header/mt-1579-home-header-bg.jpg")
+  background: url("../images/header/mt-1579-home-header-bg.jpg")
     no-repeat;
   // height: 310px;
   background-size: cover;
