--- a/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
+++ b/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
@@ -8,16 +8,16 @@
     // border: 1px solid $color-radical-red;
     margin-bottom: 25px;
     &:nth-child(1) {
-      background-image: url("../../../../../images/our_teachers/mt-1579-home-teacher1.jpg");
+      background-image: url("../images/our_teachers/mt-1579-home-teacher1.jpg");
     }
     &:nth-child(2) {
-      background-image: url("../../../../../images/our_teachers/mt-1579-home-teacher2.jpg");
+      background-image: url("../images/our_teachers/mt-1579-home-teacher2.jpg");
     }
     &:nth-child(3) {
-      background-image: url("../../../../../images/our_teachers/mt-1579-home-teacher3.jpg");
+      background-image: url("../images/our_teachers/mt-1579-home-teacher3.jpg");
     }
     &:nth-child(4) {
-      background-image: url("../../../../../images/our_teachers/mt-1579-home-teacher4.jpg");
+      background-image: url("../images/our_teachers/mt-1579-home-teacher4.jpg");
     }
   }
 
