--- a/styles/home_page/layout/_all.scss
+++ b/styles/home_page/layout/_all.scss
@@ -1,5 +1,6 @@
 @import "header_layout/layout_intro";
 @import "header_layout/layout_contacttop";
+@import "header_layout/layout_menu";
 @import "main_layout/layout_contact";
 @import "main_layout/layout_ourteachers";
 @import "main_layout/layout_review";
