--- a/styles/home_page/layout/header_layout/_layout_menu.scss
+++ b/styles/home_page/layout/header_layout/_layout_menu.scss
@@ -1,3 +1,14 @@
-.full-screen-menu{
-  
+@media only all and (min-width: 786px) {
+  .full-screen-menu{
+    position: sticky;
+    top: 0;
+  }
+  .header__menu {
+    max-width: 1200px;
+    margin: 0 auto;
+
+    .nav-link-pd {
+      margin-left: 70px;
+    }
+  }
 }
