--- a/styles/home_page/components/header/_menu.scss
+++ b/styles/home_page/components/header/_menu.scss
@@ -4,22 +4,22 @@
     // padding: 13px 20px;
     .nav-link-pd {
       @include font-sizes(17, 24);
-      color: $color-purple-heart;
+      color: #000;
       font-weight: 500;
       padding: 10px 0;
+      &:hover {
+        color: $color-radical-red;
+      }
     }
   }
 }
 
 @media only all and (min-width: 786px) {
   .header__menu {
-    max-width: 1200px;
-    margin: 0 auto;
     .navbar-pd {
       padding: 0;
       .nav-link-pd {
         padding: 0;
-        margin-left: 70px;
       }
     }
   }
