--- a/styles/home_page/layout/main_layout/_lauout_welcome.scss
+++ b/styles/home_page/layout/main_layout/_lauout_welcome.scss
@@ -1,6 +1,13 @@
 .welcome {
   padding: 25px 15px;
+
   &__content {
+    .welcome__list {
+      .nav-position {
+        display: block;
+        border: none;
+      }
+    }
     display: flex;
     flex-direction: column;
     .welcome__img {
@@ -18,4 +25,26 @@
 @media only all and (min-width: 786px) and (max-width: 960px) {
 }
 @media only all and (min-width: 960px) {
+}
+@media only all and (min-width: 786px) {
+  .welcome {
+    max-width: 1200px;
+    margin: 0 auto;
+    &__content {
+      flex-direction: row;
+      align-items: space-between;
+      margin-top: 60px;
+      .welcome__list {
+        .nav-position {
+          display: flex;
+          flex-direction: row;
+        }
+      }
+    }
+    &__right {
+      margin-left: 20px;
+    }
+
+
+  }
 }
