--- a/styles/home_page/layout/main_layout/_layout_contact.scss
+++ b/styles/home_page/layout/main_layout/_layout_contact.scss
@@ -2,6 +2,7 @@
   &__width {
     width: auto;
     height: 100%;
+    padding: 30px;
     background: $color-radical-red;
   }
   &__about {
@@ -12,10 +13,8 @@
     max-width: 400px;
     // margin: 25px;
   }
-
   &__items {
     display: flex;
-
   }
   &__info {
     display: block;
@@ -30,11 +29,32 @@
     .feedback__submit{
       align-self: flex-end
     }
-
   }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
 }
 @media only all and (min-width: 960px) {
+}
+@media only all and (min-width: 786px){
+  .contact{
+    padding-bottom: 130px;
+    &__width {
+     margin: 60px 10px 0 10px;
+       height: auto ;
+    }
+    max-width: 1200px;
+    margin: 0 auto;
+    .feedback{
+      width: 100%;
+      margin: 60px 10px 0 10px;
 
+      height: auto;
+
+    }
+    &__list{
+      display: flex;
+      justify-content: space-between;
+      padding: 0 100px;
+    }
+  }
 }
