--- a/styles/home_page/layout/main_layout/_layout_review.scss
+++ b/styles/home_page/layout/main_layout/_layout_review.scss
@@ -11,19 +11,19 @@
 }
 
 @media only all and (min-width: 786px) {
-  // .review {
-  // flex-direction: row;
-  // justify-content: space-around;
-  //   &__items {
-  //     display: flex;
-  //     flex-direction: column;
-  //     align-items: center;
-  //     // justify-content: center;
-  //   }
-  // }
+  .review {
+  flex-direction: row;
+  justify-content: space-around;
+    &__items {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // justify-content: center;
+    }
+  }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
 }
 @media only all and (min-width: 960px) {
-
+  
 }
