--- a/styles/home_page/layout/main_layout/_layout_testimonials.scss
+++ b/styles/home_page/layout/main_layout/_layout_testimonials.scss
@@ -1,5 +1,6 @@
 .full-screen-testimonials {
   background-color: $color-blueviolet;
+  background-image: url("../images/mt-1579-home-parallax3.png");
 }
 .testimonials {
   padding: 55px 15px;
