--- a/styles/home_page/components/header/_introduction.scss
+++ b/styles/home_page/components/header/_introduction.scss
@@ -1,11 +1,10 @@
 .header__intro {
   width: auto;
-  background: url("../images/header/mt-1579-home-header-bg.jpg")
-    no-repeat;
+  background: url("../images/header/mt-1579-home-header-bg.jpg") no-repeat;
   // height: 310px;
   background-size: cover;
   padding: 45px 15px;
-  .introduction{
+  .introduction {
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -14,5 +13,10 @@
 @media only all and (min-width: 786px) and (max-width: 960px) {
 }
 @media only all and (min-width: 960px) {
-
+  .header__intro {
+    padding: 60px 15px;
+    .introduction {
+      padding: 130px 0;
+    }
+  }
 }
