--- a/styles/home_page/components/main/_review.scss
+++ b/styles/home_page/components/main/_review.scss
@@ -22,7 +22,19 @@
   }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .review {
+    &__feel {
+      font-size: 14px;
+    }
+  }
 }
 @media only all and (min-width: 960px) {
-
+  .review {
+    &__number {
+      font-size: 50px;
+    }
+    &__feel {
+      font-size:20px;
+    }
+  }
 }
