--- a/styles/home_page/components/main/contact/_contact_intro.scss
+++ b/styles/home_page/components/main/contact/_contact_intro.scss
@@ -3,10 +3,9 @@
   &__width {
     border-radius: 40px;
     margin-bottom: 25px;
-
   }
   &__about {
-    padding: 30px;
+    padding-left: 30px;
   }
   &__items {
     padding: 10px 0;
