--- a/styles/home_page/components/main/our_class/_our_class_content.scss
+++ b/styles/home_page/components/main/our_class/_our_class_content.scss
@@ -61,7 +61,61 @@
   }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .ourclass {
+    &__list {
+    }
+    &__itemsub {
+      padding: 25px;
+    }
+    &__title {
+      font-size: 20px;
+    }
+    &__sub {
+      padding: 0 10px;
+      .aboutsub__title {
+        font-size: 14px;
+      }
+      .aboutsub__content {
+        font-size: 12px;
+      }
+      &:nth-child(2) {
+        border-left: 1px solid $color-mercury;
+        border-right: 1px solid $color-mercury;
+      }
+    }
+  }
 }
 @media only all and (min-width: 960px) {
+  .ourclass {
+    &__list {
+    }
 
+    &__itemsub {
+      padding: 30px;
+    }
+    &__title {
+      font-size: 24px;
+    }
+    &__sub {
+      padding: 0 15px;
+      .aboutsub__title {
+        font-size: 20px;
+      }
+      .aboutsub__content {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media only all and (min-width: 786px) {
+  .ourclass {
+    &__sub {
+      max-width: 120px;
+      &:nth-child(2) {
+        border-left: 1px solid $color-mercury;
+        border-right: 1px solid $color-mercury;
+      }
+    }
+  }
 }
