--- a/styles/home_page/components/main/welcome/_welcome__content.scss
+++ b/styles/home_page/components/main/welcome/_welcome__content.scss
@@ -30,21 +30,40 @@
 }
 
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .welcome {
+    &__content {
+      .nav-link.nav-link-color {
+        font-size: 18px;
+      }
+      .card-body-modify {
+        font-size: 13px;
+
+      }
+    }
+  }
 }
 @media only all and (min-width: 960px) {
+.welcome {
+    &__content {
+      .nav-link.nav-link-color {
+        font-size: 22px;
+      }
+      .card-body-modify {
+        font-size: 15px;
+
+      }
+    }
+  }
 }
 @media only all and (min-width: 786px) {
   .welcome {
     &__content {
       .nav-link.nav-link-color {
-        font-size: 22px;
         text-align: start;
         margin: 0;
         margin-right: 50px;
       }
       .card-body-modify {
-        color: $color-mountain-mist;
-        font-size: 14px;
         padding: 30px 0 0 0;
       }
     }
