--- a/styles/home_page/layout/main_layout/_layout_ourteachers.scss
+++ b/styles/home_page/layout/main_layout/_layout_ourteachers.scss
@@ -5,5 +5,14 @@
 @media only all and (min-width: 786px) and (max-width: 960px) {
 }
 @media only all and (min-width: 960px) {
-
+}
+@media only all and (min-width: 786px) {
+  .ourteachers {
+    max-width: 1200px;
+    margin: 0 auto;
+    &__list {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
