--- a/styles/home_page/layout/main_layout/_layout_question.scss
+++ b/styles/home_page/layout/main_layout/_layout_question.scss
@@ -1,13 +1,40 @@
 .question {
   padding: 45px 15px;
-  &__img{
-    width: 100%;
-    height: auto;
+  .card-modify{
+    margin-bottom: 30px;
+  }
+  &__img {
+    width: auto;
+    height: 100%;
   }
 }
 
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .question {
+    &__item {
+      margin-top: 35px;
+    }
+  }
 }
-@media only all and (min-width: 960px) {
 
+@media only all and (min-width: 960px) {
+  .question {
+    &__item {
+      margin-top: 60px;
+    }
+  }
+}
+@media only all and (min-width: 786px) {
+  .question {
+    max-width: 1200px;
+    margin: 0 auto;
+    .accordion--width{
+      width: 100%;
+    }
+    &__item {
+      display: flex;
+      margin-top: 60px;
+      justify-content: space-between;
+    }
+  }
 }
