done design ipad/desktop

--- a/styles/blocks/_title.scss
+++ b/styles/blocks/_title.scss
@@ -36,6 +36,7 @@
     &__content {
       font-size: 13px;
       max-width: 473px;
+      margin: 0 auto;
       &--width {
         font-size: 15px;
         max-width: 560px;
@@ -46,9 +47,9 @@
 @media only all and (min-width: 960px) {
   .introduction {
     &__title {
-      font-size: 65px;
+      font-size: 50px;
       &--width {
-        font-size: 50px;
+        font-size: 65px;
         max-width: 680px;
       }
     }
