--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -41,8 +41,16 @@
 }
 
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .buttons {
+    &--welcome {
+    }
+  }
 }
 @media only all and (min-width: 960px) {
+  .buttons {
+    &--welcome {
+    }
+  }
 }
 @media only all and (min-width: 786px) {
   .buttons {
