--- a/styles/home_page/components/footer/_footer.scss
+++ b/styles/home_page/components/footer/_footer.scss
@@ -5,9 +5,8 @@
   background: $color-purple-heart;
 }
 .footer {
+  padding: 15px;
   &__list {
-    padding: 15px;
-
     color: #ffffff;
   }
   &__sub {
@@ -51,6 +50,9 @@
   }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .footer {
+    padding: 65px 15px;
+  }
 }
 @media only all and (min-width: 960px) {
 }
@@ -60,6 +62,9 @@
       &__items {
         margin: 0 8px 0 0;
       }
+    }
+    &__sub {
+      margin-bottom: 0;
     }
   }
 }
