--- a/styles/home_page/components/header/_introduction.scss
+++ b/styles/home_page/components/header/_introduction.scss
@@ -3,20 +3,26 @@
   background: url("../images/header/mt-1579-home-header-bg.jpg") no-repeat;
   // height: 310px;
   background-size: cover;
-  padding: 45px 15px;
   .introduction {
+    padding: 45px 15px;
     max-width: 1200px;
     margin: 0 auto;
   }
 }
 
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .header__intro {
+    .introduction {
+      padding-top: 110px;
+      padding-bottom: 110px;
+    }
+  }
 }
 @media only all and (min-width: 960px) {
   .header__intro {
-    padding: 60px 15px;
     .introduction {
-      padding: 130px 0;
+      padding-top: 130px;
+      padding-bottom: 130px;
     }
   }
 }
