--- a/styles/home_page/components/main/_review.scss
+++ b/styles/home_page/components/main/_review.scss
@@ -23,6 +23,7 @@
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
   .review {
+    padding: 35px 0;
     &__feel {
       font-size: 14px;
     }
@@ -30,11 +31,12 @@
 }
 @media only all and (min-width: 960px) {
   .review {
+    padding: 60px 0;
     &__number {
       font-size: 50px;
     }
     &__feel {
-      font-size:20px;
+      font-size: 20px;
     }
   }
 }
