--- a/styles/home_page/layout/main_layout/_layout_question.scss
+++ b/styles/home_page/layout/main_layout/_layout_question.scss
@@ -1,16 +1,18 @@
 .question {
   padding: 45px 15px;
-  .card-modify{
+  .card-modify {
     margin-bottom: 30px;
   }
   &__img {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
   }
 }
 
 @media only all and (min-width: 786px) and (max-width: 960px) {
   .question {
+    padding: 65px 15px;
+
     &__item {
       margin-top: 35px;
     }
@@ -19,17 +21,26 @@
 
 @media only all and (min-width: 960px) {
   .question {
+    padding: 130px 15px;
     &__item {
       margin-top: 60px;
     }
+    // &__img {
+    //   width: auto;
+    //   height: 100%;
+    // }
   }
 }
 @media only all and (min-width: 786px) {
   .question {
     max-width: 1200px;
     margin: 0 auto;
-    .accordion--width{
+    .accordion--width {
       width: 100%;
+    }
+    &__img {
+      width: 100%;
+      height: auto;
     }
     &__item {
       display: flex;
