--- a/styles/home_page/components/main/contact/_contact_content.scss
+++ b/styles/home_page/components/main/contact/_contact_content.scss
@@ -38,10 +38,22 @@
 @media only all and (min-width: 786px) and (max-width: 960px) {
   .contact {
     padding: 65px 15px;
+    &__icon {
+      font-size: 20px;
+    }
+    &__title {
+      font-size: 14px;
+    }
+    &__info {
+      font-size: 12px;
+    }
   }
 }
 @media only all and (min-width: 960px) {
   .contact {
     padding: 130px 15px;
+    &__title {
+      font-size: 20px;
+    }
   }
 }
