--- a/styles/home_page/layout/main_layout/_layout_contact.scss
+++ b/styles/home_page/layout/main_layout/_layout_contact.scss
@@ -1,4 +1,7 @@
 .contact {
+  &__list {
+    width: 100%;
+  }
   &__width {
     width: auto;
     height: 100%;
@@ -32,27 +35,38 @@
   }
 }
 @media only all and (min-width: 786px) and (max-width: 960px) {
+  .contact {
+    &__list {
+      padding: 0 85px;
+    }
+  }
 }
 @media only all and (min-width: 960px) {
+  .contact {
+    &__list {
+      padding: 0 100px;
+    }
+  }
 }
 @media only all and (min-width: 786px) {
   .contact {
     &__width {
+      display: flex;
       margin: 60px 10px 0 10px;
       height: auto;
+      justify-content: center;
+      align-items: center;
     }
     max-width: 1200px;
     margin: 0 auto;
     .feedback {
       width: 100%;
       margin: 60px 10px 0 10px;
-
       height: auto;
     }
     &__list {
       display: flex;
       justify-content: space-between;
-      padding: 0 100px;
     }
   }
 }
