--- a/styles/home_page/components/header/_introduction.scss
+++ b/styles/home_page/components/header/_introduction.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
   .header__intro {
     .introduction {
       padding-top: 110px;
