--- a/styles/home_page/components/main/_review.scss
+++ b/styles/home_page/components/main/_review.scss
@@ -21,7 +21,7 @@
     font-size: 18px;
   }
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
   .review {
     padding: 35px 0;
     &__feel {
