--- a/styles/blocks/_social.scss
+++ b/styles/blocks/_social.scss
@@ -26,7 +26,7 @@
     margin: 0;
   }
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
 }
 @media only all and (min-width: 960px) {
 }
