--- a/styles/home_page/components/main/_about.scss
+++ b/styles/home_page/components/main/_about.scss
@@ -2,7 +2,7 @@
   background-image: url("../images/mt-1579-home-parallax1.jpg");
   padding: 25px 15px;
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
   .about {
     padding: 65px 15px;
   }
