--- a/styles/home_page/components/main/_testimonials.scss
+++ b/styles/home_page/components/main/_testimonials.scss
@@ -40,7 +40,7 @@
     }
   }
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
   .testimonials {
     padding: 65px 15px;
   }
