--- a/styles/home_page/components/main/question/_question_card.scss
+++ b/styles/home_page/components/main/question/_question_card.scss
@@ -32,7 +32,7 @@
   }
 }
 
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
 }
 @media only all and (min-width: 960px) {
 }
