--- a/styles/home_page/layout/block_layouts/_layout_social.scss
+++ b/styles/home_page/layout/block_layouts/_layout_social.scss
@@ -3,7 +3,7 @@
     // margin-right: 8px;
   }
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+@media only all and (min-width: 786px) {
 }
 @media only all and (min-width: 960px) {
 }
