--- a/styles/home_page/layout/main_layout/_layout_contact.scss
+++ b/styles/home_page/layout/main_layout/_layout_contact.scss
@@ -14,7 +14,6 @@
     align-items: flex-start;
     margin: 0 auto;
     max-width: 400px;
-    // margin: 25px;
   }
   &__items {
     display: flex;
@@ -34,26 +33,15 @@
     }
   }
 }
-@media only all and (min-width: 786px) and (max-width: 960px) {
+
+@media only all and (min-width: 786px) {
   .contact {
     &__list {
       padding: 0 85px;
     }
-  }
-}
-@media only all and (min-width: 960px) {
-  .contact {
-    &__list {
-      padding: 0 100px;
-    }
-  }
-}
-@media only all and (min-width: 786px) {
-  .contact {
     &__width {
       display: flex;
       margin: 60px 10px 0 10px;
-      height: auto;
       justify-content: center;
       align-items: center;
     }
@@ -62,11 +50,23 @@
     .feedback {
       width: 100%;
       margin: 60px 10px 0 10px;
-      height: auto;
     }
     &__list {
       display: flex;
       justify-content: space-between;
+    }
+  }
+}
+@media only all and (min-width: 960px) {
+  .contact {
+    &__list {
+      padding: 0 100px;
+    }
+    &__width {
+      height: auto;
+    }
+    .feedback {
+      height: auto;
     }
   }
 }
