--- a/styles/home_page/components/header/_menu.scss
+++ b/styles/home_page/components/header/_menu.scss
@@ -9,6 +9,7 @@
       color: #000;
       font-weight: 500;
       padding: 10px 0;
+      transition: .3s;
       &:hover {
         color: $color-radical-red;
       }
