--- a/styles/home_page/layout/header_layout/_layout_menu.scss
+++ b/styles/home_page/layout/header_layout/_layout_menu.scss
@@ -12,3 +12,10 @@
     }
   }
 }
+@media only all and (min-width: 960) {
+  .header__menu {
+    .nav-link-pd {
+      margin-left: 70px;
+    }
+  }
+}
