--- a/styles/blocks/_logo.scss
+++ b/styles/blocks/_logo.scss
@@ -26,6 +26,7 @@
     color: #000;
     font-family: "Dosis", sans-serif;
     font-weight: bold;
+    margin-top: -30px;
     &:hover {
       text-decoration: none;
       color: #000;
