fix bug iPad/desktop breakpoint

--- a/styles/blocks/_form_input.scss
+++ b/styles/blocks/_form_input.scss
@@ -15,6 +15,7 @@
   &--textarea {
     resize: none;
     overflow: auto;
+    height: 100px;
     // &:scrollbar {
     //   width: 3px;
     //   scrollbar-width: 5px;
