--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,3 +3,7 @@
 @import "blocks/all";
 @import "home_page/components/all";
 @import "home_page/layout/all";
+
+// html{
+//   font-family: "Dosis", sans-serif;
+// }
