--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -3,6 +3,11 @@
   border-radius: 35px;
   border: 1px solid $color-purple-heart;
   box-sizing: border-box;
+  transition: 0.2s;
+  font-family: "Dosis", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
   &:hover {
     background-color: $color-radical-red;
     border-color: $color-radical-red;
@@ -10,6 +15,7 @@
   &--subscribe {
     background-color: $color-radical-red;
     border: 1px solid $color-radical-red;
+
     &:hover {
       background-color: $color-purple-heart;
       border-color: $color-purple-heart;
@@ -27,16 +33,13 @@
     }
   }
   &--welcome {
-    cursor: pointer;
     display: inline-block;
     text-align: center;
-    font-weight: 700;
     color: #ffffff !important;
     font-size: 14px;
     padding: 12px 25px;
     margin: 0 auto;
     margin-top: 20px;
-    font-family: "Dosis", sans-serif;
   }
 }
 
