--- a/styles/blocks/_logo.scss
+++ b/styles/blocks/_logo.scss
@@ -1,11 +1,13 @@
 .logo {
   &-color {
+    position: relative;
+    top: 9px;
     font-size: 28px;
     margin: 0;
     padding: 0;
     font-weight: bold;
-    font-family: "Dosis", sans-serif;
-    font-weight: 800;
+    font-family: "Coiny", sans-serif;
+    letter-spacing: -3.5px;
     &:hover {
       text-decoration: none;
     }
@@ -23,13 +25,43 @@
     }
   }
   &-name {
+    position: relative;
+    bottom: 9px;
     color: #000;
     font-family: "Dosis", sans-serif;
-    font-weight: bold;
+    font-weight: 700;
+    font-size: 17px;
+    letter-spacing: 2px;
     margin-top: -30px;
+    &-color{
+      color:#fff;
+      &:hover {
+        color: #FFF !important;
+      }
+    }
     &:hover {
       text-decoration: none;
       color: #000;
+    }
+  }
+}
+
+@media only all and (min-width: 768px) {
+  .logo {
+    &-color {
+      letter-spacing: -4px;
+      font-size: 30px;
+    }
+  }
+}
+@media only all and (min-width: 960px) {
+  .logo {
+    &-color {
+      letter-spacing: -6px;
+      font-size: 34px;
+    }
+    &-name {
+      font-size: 18px;
     }
   }
 }
