--- a/styles/blocks/_title.scss
+++ b/styles/blocks/_title.scss
@@ -9,6 +9,7 @@
     color: black;
     font-weight: bold;
     margin-bottom: 50px;
+    z-index: -1;
     // background-image: url("../images/block/mt-1579-home-divider.png");
     &::before {
       position: absolute;
