--- a/styles/home_page/components/footer/_footer.scss
+++ b/styles/home_page/components/footer/_footer.scss
@@ -13,10 +13,13 @@
     margin-bottom: 30px;
   }
   &__title {
+    font-family: "Dosis";
     font-size: 20px;
+    font-weight: 700;
     padding: 10px 0;
   }
   &__content {
+    font-family: "Open Sans";
     font-size: 14px;
     line-height: 1.5;
     &--about {
@@ -40,8 +43,10 @@
     margin-right: 10px;
   }
   &__bottom {
-    padding: 10px 15px;
+    font-family: "Open Sans";
     color: #ffffff;
+    padding: 10px 15px;
+    font-size: 14px;
   }
   .social {
     &__items {
@@ -52,17 +57,45 @@
 
 @media only all and (min-width: 768px) {
   .footer {
-    padding: 65px 15px;
+    padding: 65px 0;
     .social {
       &__items {
         margin: 0 8px 0 0;
       }
     }
+    &__content {
+      font-size: 12px;
+    }
     &__sub {
       margin-bottom: 0;
+      padding: 0 10px;
+      width: 190px;
+    }
+    &__bottom {
+      font-size: 12px;
+    }
+    .feedback--width {
+      width: 190px;
+      padding: 0 10px;
     }
   }
 }
 @media only all and (min-width: 960px) {
-  
+  .footer {
+    &__content {
+      font-size: 14px;
+    }
+    &__title {
+      font-size: 22px;
+    }
+    &__sub {
+      width: 300px;
+    }
+    &__bottom {
+      font-size: 14px;
+    }
+    .feedback--width {
+      width: 300px;
+    }
+  }
 }
