--- a/styles/home_page/components/header/_introduction.scss
+++ b/styles/home_page/components/header/_introduction.scss
@@ -1,8 +1,11 @@
 .header__intro {
+  position: relative;
   width: auto;
   background: url("../images/header/mt-1579-home-header-bg.jpg") no-repeat;
   // height: 310px;
   background-size: cover;
+  z-index: -10;
+
   .introduction {
     padding: 45px 15px;
     max-width: 1200px;
@@ -12,6 +15,8 @@
 
 @media only all and (min-width: 768px) {
   .header__intro {
+    background-size: 100% 100%;
+
     .introduction {
       padding-top: 110px;
       padding-bottom: 110px;
@@ -20,6 +25,7 @@
 }
 @media only all and (min-width: 960px) {
   .header__intro {
+    background-size: cover;
     .introduction {
       padding-top: 130px;
       padding-bottom: 130px;
