--- a/styles/home_page/components/main/contact/_contact_content.scss
+++ b/styles/home_page/components/main/contact/_contact_content.scss
@@ -23,10 +23,14 @@
   }
   &__title {
     font-size: 18px;
+    font-family: "Dosis";
+    font-weight: 700;
     margin: 0;
     padding: 0;
   }
   &__info {
+    font-family: "Open Sans";
+
     font-size: 14px;
     color: #ffffff;
     margin: 0;
