--- a/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
+++ b/styles/home_page/components/main/our_teachers/_our_teachers_content.scss
@@ -2,7 +2,7 @@
   padding: 45px 15px;
   &__items {
     position: relative;
-    width: auto;
+    max-width: 100%;
     height: 380px;
     &:nth-child(1) .ourteachers__about {
       background: $color-radical-red;
@@ -46,6 +46,11 @@
     padding: 65px 0px;
     &__items {
       padding: 0 10px;
+      height: 360px;
+    }
+    &__img {
+      border-radius: 40px;
+      object-fit: cover;
     }
     &__about {
       right: 10px;
