--- a/styles/home_page/layout/header_layout/_layout_menu.scss
+++ b/styles/home_page/layout/header_layout/_layout_menu.scss
@@ -6,13 +6,12 @@
   .header__menu {
     max-width: 1200px;
     margin: 0 auto;
-
     .nav-link-pd {
-      margin-left: 70px;
+      margin-left: 30px;
     }
   }
 }
-@media only all and (min-width: 960) {
+@media only all and (min-width: 960px) {
   .header__menu {
     .nav-link-pd {
       margin-left: 70px;
