--- a/styles/home_page/layout/main_layout/_layout_contact.scss
+++ b/styles/home_page/layout/main_layout/_layout_contact.scss
@@ -18,6 +18,8 @@
   &__items {
     display: flex;
   }
+  &____title {
+  }
   &__info {
     display: block;
   }
@@ -37,23 +39,22 @@
 @media only all and (min-width: 768px) {
   .contact {
     &__list {
-      padding: 0 85px;
+      // width: 100%;
+      padding: 0 65px;
+      display: flex;
     }
     &__width {
       display: flex;
       margin: 60px 10px 0 10px;
+      width: 35%;
       justify-content: center;
       align-items: center;
     }
     max-width: 1200px;
     margin: 0 auto;
     .feedback {
-      width: 100%;
+      width: 65%;
       margin: 60px 10px 0 10px;
-    }
-    &__list {
-      display: flex;
-      justify-content: space-between;
     }
   }
 }
@@ -64,8 +65,10 @@
     }
     &__width {
       height: auto;
+      width: 40%;
     }
     .feedback {
+      width: 60%;
       height: auto;
     }
   }
