--- a/styles/home_page/layout/main_layout/_layout_testimonials.scss
+++ b/styles/home_page/layout/main_layout/_layout_testimonials.scss
@@ -1,6 +1,10 @@
 .full-screen-testimonials {
   background-color: $color-blueviolet;
   background-image: url("../images/mt-1579-home-parallax3.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .testimonials {
   &__items {
