--- a/styles/blocks/_title.scss
+++ b/styles/blocks/_title.scss
@@ -9,7 +9,7 @@
     color: black;
     font-weight: bold;
     margin-bottom: 50px;
-    z-index: -1;
+    z-index: 1;
     // background-image: url("../images/block/mt-1579-home-divider.png");
     &::before {
       position: absolute;
@@ -19,11 +19,13 @@
       width: 64px;
       height: 17px;
       content: "";
+      // z-index: -10;
       background-image: url("../images/block/mt-1579-home-divider.png");
     }
     &--color {
       color: white;
       &::before {
+        // z-index: -10;
         background-image: url("../images/block/mt-1579-home-divider1.png");
       }
     }
